--- a/Footer/package.json
+++ b/Footer/package.json
@@ -7,7 +7,7 @@
     "start": "npm run watch & live-server public",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "lint" : "eslint ./"
+    "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -28,8 +27,9 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "path": "^0.12.7"
+    "styled-components": "^4.1.3"
   }
 }
