Initial webpack setting

--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./"
   },
