--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -1,37 +1,33 @@
 {
-  "name": "overview-photo",
+  "name": "hippo-overviewphoto",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
-    "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js",
+    "start": "npm run watch",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
     "lint": "eslint ./"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "webpack": "^2.2.1"
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "morgan": "^1.9.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.15.0",
-    "jquery": "^3.1.1",
-    "mongoose": "^4.9.6",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "request": "^2.81.0"
+    "path": "^0.12.7",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
