--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run watch",
+    "start": "npm run watch & nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "lint": "eslint ./"
@@ -26,6 +26,9 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
