--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -7,7 +7,8 @@
     "start": "npm run watch & nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "db": "mongod & mongo"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongoose": "^5.4.10",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.7.0",
