--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run watch & nodemon server/index.js",
+    "start": "npm run watch & nodemon server/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "lint": "eslint ./",
-    "db": "mongod & mongo"
+    "db": "mongod & mongo & node database/index.js"
   },
   "keywords": [],
   "author": "",
