--- a/Footer/package.json
+++ b/Footer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run watch & live-server public",
+    "start": "npm run watch & nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "lint": "eslint ./"
@@ -23,10 +23,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "live-server": "^1.2.1",
+    "nodemon": "^1.18.9",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
