--- a/Footer/package.json
+++ b/Footer/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
+    "prop-types": "^15.7.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "styled-components": "^4.1.3"
