--- a/Footer/package.json
+++ b/Footer/package.json
@@ -29,12 +29,14 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.1.3"
   }
 }
