--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -28,11 +28,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.10",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "style-loader": "^0.23.1"
   }
 }
