--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -35,6 +35,9 @@
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1"
   }
 }
