Add logic for CarouselModal to appear

--- a/OverviewPhoto/.eslintrc.json
+++ b/OverviewPhoto/.eslintrc.json
@@ -2,7 +2,9 @@
     "extends": "airbnb",
     "rules":{
         "no-console": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-noninteractive-element-interactions": 0
     },
     "env": {
         "browser": true
