--- a/OverviewPhoto/.eslintrc.json
+++ b/OverviewPhoto/.eslintrc.json
@@ -2,10 +2,7 @@
     "extends": "airbnb",
     "rules":{
         "no-console": 0,
-        "no-plusplus": 0,
-        "jsx-a11y/click-events-have-key-events": 0,
-        "jsx-a11y/no-noninteractive-element-interactions": 0,
-        "jsx-a11y/no-static-element-interactions" :0
+        "no-plusplus": 0
     },
     "env": {
         "browser": true
