--- a/Footer/package.json
+++ b/Footer/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
