--- a/OverviewPhoto/package.json
+++ b/OverviewPhoto/package.json
@@ -29,8 +29,11 @@
   "dependencies": {
     "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
     "mongoose": "^5.4.10",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
