--- a/Footer/package.json
+++ b/Footer/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run watch & nodemon server/index.js",
+    "start": "npm run react-prod & nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
+    "react-prod": "webpack -p",
     "lint": "eslint ./"
   },
   "keywords": [],
